Adicionando resumo e abstract

--- a/editaveis/abstract.tex
+++ b/editaveis/abstract.tex
@@ -1,10 +1,11 @@
 \begin{resumo}[Abstract]
  \begin{otherlanguage*}{english}
-   Abstract.
+
+   The production of code and the implementation of unit tests, as well as the code inspections, are closely connected. Unit tests and inspections, as complementary software verification practices, were designed with the intention of improving the identification of defects in the software source code.In this sense, it is also worth noting that the quality of the source code influences the quality of use of the software, which is contemplated by the user. In this work, the objective is to propose a framework that combines a set of activities and practices that favor the implementation of unit tests and code inspections, taking into account the precepts of Value-Based Software Engineering, which addresses the alignment between the project's mission and the technical activities of software development. As results, it is expected that the framework is suitable for use in any organization at the end of the application of technical research procedures.
 
    \vspace{\onelineskip}
  
    \noindent 
-   \textbf{Key-words}:
+   \textbf{Key-words}: Code Quality; Unit Tests; Code Inspections; Value-Based Software Engineering.
  \end{otherlanguage*}
 \end{resumo}
