--- a/editaveis/informacoes.tex
+++ b/editaveis/informacoes.tex
@@ -5,11 +5,11 @@
 % Dados do trabalho
 \titulo{Framework para Avaliação da Qualidade de Código: Uma Abordagem Baseada em Valor}
 \data{2016}
-\palavraChaveUm{Palavra-chave01}
-\palavraChaveDois{Palavra-chave02}
+\palavraChaveUm{Qualidade de Código}
+\palavraChaveDois{Engenharia de Software Baseada em Valor}
 
 % Dados da orientacao
-\orientador{Msc. Elaine Venson}
+\orientador{Profª Msc. Elaine Venson}
 
 % Dados para a ficha catalográfica
 \cdu{02:141:005.6}
