--- a/editaveis/resumo.tex
+++ b/editaveis/resumo.tex
@@ -1,8 +1,9 @@
 \begin{resumo}
- Resumo.
+ 
+ A produção de código e a implementação de testes unitários, bem como a realização de inspeções de código, estão instrinsecamente concetados. Testes unitários e inspeções, enquanto práticas complementares da verificação de \textit{software}, foram concebidas com a intenção de se melhorar a identificação de defeitos existentes no código fonte do \textit{software}. Nesse sentido, também é válido notar que a qualidade do código fonte influi na qualidade de uso do \textit{software}, sendo esta contemplada pelo usuário. Neste trabalho, o objetivo é propor um \textit{framework} que reúne um conjunto de atividades e práticas que favoreçam a implementação de testes unitários e realização de inspeções de código, levando em consideração os preceitos da Engenharia de Software Baseada em Valor, que aborda o alinhamento entre a missão do projeto e as atividades técnicas de desenvolvimento de \textit{software}. Espera-se, como resultados, que o \textit{framework} esteja adequado ao uso em qualquer organização ao final da aplicação dos procedimentos técnicos de pesquisa.
 
  \vspace{\onelineskip}
     
  \noindent
- \textbf{Palavras-chaves}: À definir
+ \textbf{Palavras-chave}: Qualidade de Código; Testes Unitários; Inspeções de Código; Engenharia de Software Baseada em Valor.
 \end{resumo}
